<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <TextView
            android:gravity="center_vertical"
            android:layout_gravity="center_horizontal"
            android:drawableTint="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_email_black_18dp"
            android:textSize="25sp"
            android:id="@+id/tv_email"
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    <include layout="@layout/item_divider" />
    <TableRow
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:drawableTint="@color/colorPrimary"
            android:layout_gravity="left"
            android:layout_width="150dp"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:text="@string/ticket_id"/>
        <TextView
            android:id="@+id/tv_ticket_id"
            android:layout_gravity="right"
            android:gravity="center_horizontal"
            android:layout_width="150dp"
            android:textSize="16sp"
            android:text="1,2,3"/>
    </TableRow>
    <include layout="@layout/item_divider" />
    <TableRow
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:drawableLeft="@drawable/ic_date_range_black_18dp"
            android:layout_gravity="left"
            android:layout_width="150dp"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:text="@string/order_date"/>
        <TextView
            android:id="@+id/tv_order_date"
            android:layout_gravity="right"
            android:gravity="center_horizontal"
            android:layout_width="150dp"
            android:textSize="16sp"
            android:text="2017-04-02"/>
    </TableRow>
    <include layout="@layout/item_divider" />
    <TableRow
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:drawableLeft="@drawable/ic_perm_identity_black_18dp"
            android:layout_gravity="left"
            android:layout_width="150dp"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:text="Payment:"/>
        <TextView
            android:id="@+id/tv_payment_id"
            android:layout_gravity="right"
            android:gravity="center_horizontal"
            android:layout_width="150dp"
            android:textSize="16sp"
            android:text="ONL"/>
    </TableRow>
    <include layout="@layout/item_divider" />
    <TableRow
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:drawableLeft="@drawable/ic_perm_identity_black_18dp"
            android:layout_gravity="left"
            android:layout_width="150dp"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:text="@string/status_ticket"/>
        <TextView
            android:id="@+id/tv_status"
            android:layout_gravity="right"
            android:gravity="center_horizontal"
            android:layout_width="150dp"
            android:textSize="16sp"
            android:text="Paid"/>
    </TableRow>
    <include layout="@layout/item_divider" />
    <TableRow
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:drawableLeft="@drawable/ic_perm_identity_black_18dp"
            android:layout_gravity="left"
            android:layout_width="150dp"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:text="@string/received_date"/>
        <TextView
            android:id="@+id/tv_received_date"
            android:layout_gravity="right"
            android:gravity="center_horizontal"
            android:layout_width="150dp"
            android:textSize="16sp"
            android:text="2017-03-05"/>
    </TableRow>
    <include layout="@layout/item_divider" />
    <TableRow
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:drawableLeft="@drawable/ic_perm_identity_black_18dp"
            android:layout_gravity="left"
            android:layout_width="150dp"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:text="@string/price"/>
        <TextView
            android:id="@+id/tv_total_price"
            android:layout_gravity="right"
            android:gravity="center_horizontal"
            android:layout_width="150dp"
            android:textSize="18sp"
            android:text="30000vnd"/>
    </TableRow>
    <include layout="@layout/item_divider" />
    <TableRow
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_payout"
            android:text="@string/payout"/>
        <Button
            android:id="@id/btn_cancer"
            android:text="@string/cancel"/>
        <Button
            android:text="@string/view_tk_details"
            android:id="@+id/btn_view_details"
            />
        <Button
            android:text="QR"
            android:id="@+id/btn_QR"
            />
    </TableRow>
</LinearLayout>