<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@drawable/broder_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/sign_in"
        android:textColor="#90c40909"
        android:textSize="33sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_address_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:backgroundTint="@color/colorPrimary"
            android:id="@+id/your_email_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:backgroundTint="@color/colorPrimary"
            android:id="@+id/create_new_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_ok"
        android:textSize="16sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/sign_in"
        android:textColor="#fff" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="OR"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_sign_up_email"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#dc4e41"
        android:text="@string/sign_in_gmail"
        android:textAllCaps="false"
        android:textColor="#fff" />
    <Button
        android:id="@+id/btn_sign_up_fb"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#3b5998"
        android:text="@string/sign_in_fb"
        android:textAllCaps="false"
        android:textColor="#fff" />

</LinearLayout>